    Fix bug 162681 in trunk (slow tile download).     The problem with the download implementation was that     there was only one QHttp object in HttpFetchFile, throught     which all requests were serialized.     Now we have got one QHttp object per active HttpJob, so     this bottleneck is gone now.     This fix was committed in trunk earlier this day.

CCBUG: 162681
BUG: 162681


svn path=/branches/KDE/4.1/kdeedu/marble/; revision=835029